[package]
name = "mir_testing"
version = "0.1.0"
edition = "2021"
# rustc_private = true

[dependencies]

# Note that in order to use RA and have access to `rustc_*` crates, you also
# need to set `"rust-analyzer.rustcSource": "discover"` in e.g. VSCode.
[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true